# Gobang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TcpAbstract.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  chessboard.cpp  chessboard.h  chessboard.ui  chessboard_fupan.cpp  chessboard_fupan.h  chessboard_fupan.ui  chessboard_local_pvp.cpp  chessboard_local_pvp.h  chessboard_local_pvp.ui  chessboard_pve.cpp  chessboard_pve.h  chessboard_pve.ui  chessboard_remote_pvp.cpp  chessboard_remote_pvp.h  chessboard_remote_pvp.ui  chessboardstatuscontroler.cpp  chessboardstatuscontroler.h  filescanner.cpp  filescanner.h  gameover.cpp  gameover.h  gameover.ui  logo.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  netwindow.cpp  netwindow.h  netwindow.ui  open_local_pvp_dialog.cpp  (+13 more)
doc/: 禁手规则.md  联机五子棋的Tcp报文格式约定.md
resources/: dialog_style.css  general_style.css  netwindow.css  remote_pvp_style.css  stylesheet.css
